<resources>
    <string name="app_name">iMobile App</string>

    <string name="text_payment_cancel">Cancel</string>
    <string name="text_pay_using">Pay Using</string>
    <string name="splash_labell">All your banking\nneeds in one app</string>
    <string name="faqs">FAQs</string>
    <string name="help">Help</string>
    <string name="user_id">User ID</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="password"><u>Password?</u></string>
    <string name="forgot_your">Forgot your</string>
    <string name="or">or</string>
    <string name="country_code">Country Code</string>
    <string name="important_notices">important notices</string>
    <string name="do_s_and_dont_s_of_safe_banking">Do’s and dont’s of safe banking</string>
    <string name="login_to">Login to</string>
    <string name="account_using">account using</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>
    <string name="never_share_your_password_or_card_details_with_anyone">Never share your password or Card details with anyone</string>
    <string name="importan_notes">1. As Introduction of charges for cash deposit in Cash Acceptor/Recycler Machines on bank holidays and post banking hours on working days with effect from Nov 01, 2020. Click here to know more.\n\n2. The ICICI Bank and Ferrari S.p.A partnership is coming to a close and hence, we will be discontinuing the Ferrari Credit Card programme. As a result of this development, there will be no renewal card issued against your card.\n\n3. As Introduction of charges for cash deposit in Cash Acceptor/Recycler Machines on bank holidays and post banking hours on working days with effect from Nov 01, 2020. Click here to know more.\n\n4. As Introduction of charges for cash deposit in Cash Acceptor/Recycler Machines on bank holidays and post banking hours on working days with effect from Nov 01, 2020. Click here to know more.\n\n5. As Introduction of charges for cash deposit in Cash Acceptor/Recycler Machines on bank holidays and post banking hours on working days with effect from Nov 01, 2020. Click here to know more.</string>
    <string name="get_quick_tips_on_precautionary_measures_to_identify_the_potential_threats">Get quick tips on precautionary measures to identify the potential threats</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="hide">Hide</string>
    <string name="flip">Flip</string>
    <string name="total_savings_balance">Total Savings balance</string>
    <string name="total_deposits">Total Deposits</string>
    <string name="total_overdraft_balance">Total overdraft balance</string>
    <string name="total_outstanding_loan">Total Outstanding loan</string>
    <string name="total_investment">Total Investment</string>
    <string name="fund_transfer">fund transfer</string>
    <string name="money_transfer">Money transfer</string>
    <string name="transfer_to_new_payee">Transfer to New Payee</string>
    <string name="manage_payees">Manage Payees</string>
    <string name="view_account_statement">view account statement</string>
    <string name="_36_40_lacks">₹ 36.40 lacks</string>
    <string name="let_s_get_started_with_your_fund_transfer">Let’s get started with your fund transfer</string>
    <string name="for_upcoming_bill_payments">for upcoming bill payments</string>
    <string name="freq_transfer">Frequent transfers</string>
    <string name="sch_transfer">Scheduled transfers</string>
    <string name="com_transfer">Completed Transfers</string>
    <string name="successful_today">Successful \u2022 Today</string>
    <string name="how_often_would_you_transfer_funds_to_this_payee">How often would you transfer funds to this payee?</string>
    <string name="multiple_times_easily_transfer_in_the_future">Multiple times - easily transfer in the future</string>
    <string name="add_new_payee">add new payee</string>
    <string name="quick_transfer">Quick_transfer</string>
    <string name="newpayee_transfer">new payee details </string>
    <string name="just_in_time_it_does_not_require_adding_the_payee">Just in time - It does not require adding the payee</string>
    <string name="confirm_their_account_number">Confirm their account number</string>
    <string name="their_account_number">Their account number</string>
    <string name="verify_payee_details_to_ensure_the_safety_of_your_fund_transfer">Verify payee details to ensure\nthe safety of your fund transfer</string>
    <string name="verify_payee">verify payee</string>
    <string name="account_holder_s_name">Account holder\'s name</string>
    <string name="want_to_transfer_funds_today">Want to transfer funds today?</string>
    <string name="upto_2_lakh">Up to ₹2 Lakh</string>
    <string name="upto_5_lakh">Up to ₹5 Lakh</string>
    <string name="upto_3_lakh">Up to ₹3 Lakh</string>
    <string name="_24_7_available">24/7 available</string>
    <string name="_99_99_56_873">₹99,99,56,873</string>
    <string name="current_balance">Current Balance</string>
    <string name="maximum_transfer_limit_is_upto_5_000">Maximum transfer limit is up to ₹5,000</string>
    <string name="quick_transfer_details">Quick TRANSFER details</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="_12_30_am_to_6_30_pm">12:30 AM to 6:30 PM</string>
    <string name="rtgs">RTGS</string>
    <string name="transfer_now">"Transfer Now"</string>
    <string name="cancel">Cancel</string>
    <string name="notes">Notes:</string>
    <string name="notsft">"1. As per the RBI circular dated Oct 14, 2010, transfer of funds through electronic mode will be executed only on the basis of the  account number of the beneficiary while initiating the transaction, name will not be considered  as a criteria for providing credit. Kindly ensure that you enter the correct beneficiary account number.\n 2. The Funds Transfer limit per transaction is Rs 10,000.\n 3. ICICI Bank is not responsible for\nFunds transferred to any unintended recipient.\nRetrieval of funds transferred to any unauthorised recipient.\nCharges/commission of any kind levied / charged by the payee's bank.\n 4. ICICI Bank has the most comprehensive security standards in place to protect your interests. At the same time, we expect you to\n follow safe practices while using the Internet Banking channel. You are fully responsible for protecting your Internet Banking User  ID and Passwords. ICICI Bank will not be liable for any loss that you may incur owing to unauthorised access into your account.\n 5. In case you are re-trying , please  check the status of your previous payment first.\n6. Allowed special characters in remarks field are- _()[]@$.?,':;/\+space"</string>
    <string name="available_balance_after_this_transfer_will_be">Available balance after this transfer will be</string>
    <string name="this_is_back_of_your_31_rubyx_debit_card">This is back of your **31 Rubyx Debit Card</string>
    <string name="please_enter_numbers_below_from_the_grid_printed_against_the_following_alphabets">Please enter numbers below from the grid printed against the following alphabets</string>
    <string name="the_validity_for_the_otp_has_expired">The validity for the OTP has expired.</string>
    <string name="not_received_your_otp_yet_please_send_a_sms_ibotp_to_5676766_or_9215676766_nrequest_should_be_sent_from_the_registered_mobile_number_nplease_do_not_share_otp_with_anyone_even_if_a_person_claims_to_be_an_icici_bank_official_nfor_further_details">Not received your OTP yet, please send a SMS IBOTP to 5676766 or 9215676766.\nRequest should be sent from the registered mobile number.\nPlease do not share OTP with anyone, even if a person claims to be an ICICI Bank official. \nFor further details,</string>
    <string name="in_case_you_haven_t_received_the_sms">In case you haven’t received the SMS</string>
    <string name="resend_new_otp">Resend new OTP</string>
    <string name="remarks_optional">Remarks (Optional)</string>
    <string name="select_bank">Please Select a bank Account.</string>
    <string name="select_bank_account">Please Select a Account no.</string>
    <string name="empt_account">Please enter account number</string>
    <string name="valid_account">Please enter 12 digit account number</string>
    <string name="valid_name">Enter nick name of Minimum 3 character and maximum 12 character</string>
    <string name="not_match">Account number does not match</string>
    <string name="ent_name">Please enter name</string>
    <string name="ent_amount">Please enter amount</string>
    <string name="ent_amount0">Amount should be more than 0</string>
    <string name="ent_amount_balance">Entered amount is more than available balance</string>
    <string name="ifsc">IFSC code</string>
    <string name="unlock_with_fingerprint">Unlock with fingerprint</string>
    <string name="banking_has_never_nbeen_so_rewarding">Banking has never\nbeen so rewarding</string>
    <string name="set_mpin">SET MPIN</string>
    <string name="your_mobile_number_verification">Your Mobile Number Verification</string>
    <string name="the_app_wills_send_sms_to_verify_your_mobile_number_registered_with_icici_n_standard_sms_charges_will_apply">The app wills send SMS to verify your mobile number registered with ICICI \n standard SMS charges will apply.</string>
    <string name="please_select_your_registered_mobile_number_from_the_sims_below">Please Select your registered mobile number from the SIMs below</string>
    <string name="please_select_a_sim">Please Select a SIM</string>
    <string name="total_accounts_balance">TOTAL ACCOUNTS BALANCE</string>
</resources>