<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildeline1"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildeline2"

            android:layout_width="0.5dp"


            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="@+id/guildeline2"
            app:layout_constraintStart_toStartOf="@+id/guildeline1"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:id="@+id/containertop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvimportantnotices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/mulish_regular"
                        android:text="@string/fund_transfer"
                        android:textAllCaps="true"

                        android:textColor="@color/textcolornew"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/mulish_regular"
                        android:text="@string/let_s_get_started_with_your_fund_transfer"
                        android:textColor="@color/textcolornewgrey"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transferNewPayeeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_7sdp"

                        android:background="@drawable/capsuleshape"
                        android:elevation="@dimen/_1sdp"
                        android:fontFamily="@font/mulish_regular"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/transfer_to_new_payee"
                        android:textAllCaps="true"
                        android:textColor="@color/text0range"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/searchableSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/capsuleshapegrey"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawableLeft="@drawable/ic_baseline_search_24"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                        android:elevation="@dimen/_2sdp"
                        android:fontFamily="@font/mulish_regular"
                        android:hint="Search for a payee to transfer funds"
                        android:padding="@dimen/_10sdp"
                        android:spinnerMode="dropdown"
                        android:textAllCaps="true"
                        android:textColor="@color/textcolornewgrey"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />


                    <!--   <com.androidtrip.plugins.searchablespinner.SearchableSpinner
                           android:id="@+id/searchableSpinner"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="@dimen/_5sdp"
                           android:layout_marginLeft="@dimen/_5sdp"
                           android:layout_marginTop="@dimen/_10sdp"
                           android:drawableStart="@drawable/ic_baseline_search_24"
                           android:drawableLeft="@drawable/ic_baseline_search_24"
                           android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                           android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"

                           android:layout_marginEnd="@dimen/_10sdp"

                           android:layout_marginRight="24dp"
                           android:gravity="center_horizontal"
                           app:BoarderColor="@color/colorPrimary"
                           app:BordersSize="1dp"
                           app:RevealEmptyText="Touch to select"
                           app:ShowBorders="true"
                           app:SpinnerExpandHeight="250dp" />-->


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="top"
                        android:orientation="horizontal"
                        android:visibility="gone">


                        <androidx.appcompat.widget.AppCompatTextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_2sdp"
                            android:layout_marginLeft="@dimen/_5sdp"

                            android:background="@drawable/capsuleshape"
                            android:elevation="@dimen/_1sdp"
                            android:fontFamily="@font/mulish_regular"
                            android:padding="@dimen/_10sdp"
                            android:text="@string/manage_payees"
                            android:textAllCaps="true"
                            android:textColor="@color/text0range"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginStart="@dimen/_5sdp"


                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/mulish_regular"
                            android:gravity="top"
                            android:text="@string/for_upcoming_bill_payments"
                            android:textColor="@color/textcolornewgrey"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_5sdp"
              android:orientation="horizontal"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/cardview">

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"></LinearLayout>


              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

              </LinearLayout>


              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

              </LinearLayout>

          </LinearLayout>-->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/color_455769"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview"

            app:tabIndicatorColor="@color/color_0AB9D1"
            app:tabTextColor="@color/color_0AB9D1"></com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>